# Face-Detection-and-Recognition

./: .gitignore  CMakeLists.txt  README.md  build.sh  config_arcface.yaml  config_retinaface.yaml  names.txt
include/: RetinaFace.h  arcface.h  read_facebank.hpp  utils.hpp
include/common/: common.cpp  common.h
src/: RetinaFace.cpp  arcface.cpp  config_arcface.yaml  main.cpp
